--- a/pom.xml
+++ b/pom.xml
@@ -204,7 +204,7 @@
         <repository>
             <id>github</id>
             <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/rmortale/http-demo</url>
+            <url>https://maven.pkg.github.com/rmortale/camel-http-demo</url>
         </repository>
     </distributionManagement>
 </project>
