Add uber-jar packaging type to Quarkus properties in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.version>3.22.2</quarkus.platform.version>
 
+        <quarkus.package.jar.type>uber-jar</quarkus.package.jar.type>
         <skipITs>true</skipITs>
         <surefire-plugin.version>3.5.3</surefire-plugin.version>
     </properties>
