refactor cron job logging path and update microservices directory creation path

--- a/playbook/tasks/microservice.yaml
+++ b/playbook/tasks/microservice.yaml
@@ -1,4 +1,4 @@
 - name: Create microservices directory
   ansible.builtin.file:
-    path: "{{ microservicedir }}/{{ service_name }}"
+    path: "{{ service_dir }}"
 
