--- a/playbook/playbook.yml
+++ b/playbook/playbook.yml
@@ -1,10 +1,10 @@
 - hosts: localhost
   connection: local
-  become: false
+  become: true
 
   vars:
     service_name: http-demo
-    service_dir: "{{ ansible_user_dir }}/{{ service_name }}"
+    service_dir: "/home/ubuntu/{{ service_name }}"
 
   pre_tasks:
     - name: ensure apt cache is up to date
