add vault password handling for artifact download and update cron job command

--- a/playbook/tasks/cron.yml
+++ b/playbook/tasks/cron.yml
@@ -3,4 +3,4 @@
     user: ubuntu
     name: "microservice Cron Job"
     minute: "*/5"
-    job: "/usr/bin/ansible-pull -o -U https://github.com/rmortale/camel-http-demo.git playbook/playbook.yml >> /home/ubuntu/{{ service_name }}-cron.log 2>&1"
+    job: "/usr/bin/ansible-pull --vault-password-file /home/ubuntu/vault-pw.txt -o -U https://github.com/rmortale/camel-http-demo.git playbook/playbook.yml >> /home/ubuntu/{{ service_name }}-cron.log 2>&1"
