--- a/playbook/tasks/microservice.yml
+++ b/playbook/tasks/microservice.yml
@@ -7,5 +7,6 @@
   ansible.builtin.get_url:
     url: "{{ artifactUrl }}"
     dest: "{{ service_dir }}/{{ service_name }}.jar"
-    username: {{ maven_user }}
-    password: {{ maven_pw }}
+    username: "{{ maven_user }}"
+    password: "{{ maven_pw }}"
+    
