fix: add missing group and owner attributes to microservices directory creation

--- a/playbook/tasks/microservice.yml
+++ b/playbook/tasks/microservice.yml
@@ -2,6 +2,8 @@
   ansible.builtin.file:
     path: "{{ service_dir }}"
     state: directory
+    group: ubuntu
+    owner: ubuntu
 
 - name: download artifact
   ansible.builtin.get_url:
