feat: add service configuration and environment template for microservice

--- a/playbook/tasks/microservice.yml
+++ b/playbook/tasks/microservice.yml
@@ -14,3 +14,10 @@
     group: ubuntu
     owner: ubuntu
 
+- name: create environment file
+  ansible.builtin.template:
+    src: env.template
+    dest: "{{ service_dir }}/.env"
+    group: ubuntu
+    owner: ubuntu
+    
