--- a/playbook/tasks/cron.yml
+++ b/playbook/tasks/cron.yml
@@ -1,6 +1,6 @@
 - name: install cron job
   cron:
     user: ubuntu
-    name: "microservice Cron Job"
+    name: "{{ service_name }} Cron Job"
     minute: "*/5"
     job: "/usr/bin/ansible-pull --vault-password-file /home/ubuntu/vault-pw.txt -o -U https://github.com/rmortale/camel-http-demo.git playbook/playbook.yml >> /home/ubuntu/{{ service_name }}-cron.log 2>&1"
