--- a/playbook/tasks/microservice.yml
+++ b/playbook/tasks/microservice.yml
@@ -25,3 +25,9 @@
   ansible.builtin.template:
     src: quarkus.service
     dest: /etc/systemd/system/{{ service_name }}.service
+
+- name: ensure service is running
+  ansible.builtin.service:
+    state: started
+    enabled: true
+    name: "{{ service_name }}"
