--- a/playbook/tasks/microservice.yml
+++ b/playbook/tasks/microservice.yml
@@ -31,3 +31,11 @@
     state: started
     enabled: true
     name: "{{ service_name }}"
+
+  # handlers:
+  #   - name: Restart service
+  #     ansible.builtin.service:
+  #       state: restarted
+  #       name: myservice
+  #     become: true
+  
