fix: update greeting message in http-demo.camel.yaml

--- a/src/main/resources/camel/http-demo.camel.yaml
+++ b/src/main/resources/camel/http-demo.camel.yaml
@@ -3,4 +3,4 @@
       uri: "platform-http:/hello"
       steps:
         - setBody:
-            constant: "Hello from Camel JBang!"
+            constant: "Hello from Camel!"
